# lightspeed-service

./: .codecov.yml  .coderabbit.yaml  .coverage.MacBook-Pro.87247.XxFhHddx  .coveragerc  .gitignore  .pre-commit-config.yaml  .snyk  .woke.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Containerfile  Containerfile.konflux  Containerfile.postgres  Containerfile.rag  Containerfile.rag-content  Containerfile.redis  Makefile  OWNERS  README.md  artifacts.lock.yaml  build-container.sh  build.args  default.env  indexer.py  junit_e2e_openai.xml  lightspeed-service.code-workspace  model_context.py  ols.py  olsconfig.yaml  pyproject.toml  pytest.ini  question_validator.py  readme.md  redhat.repo  renovate.json  requirements-build.in  requirements-build.txt  requirements-test.txt  requirements.hashes.source.txt  (+22 more)
.ai/spec/: README.md  health-report.md
.cursor/rules/: version-update.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot copy.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pdm-update-deps-action.yaml
.konflux/: README.md  profiles.toml  pypi_wheel_only.txt  rank_bm25_version.py  redhat.repo  requirements-build.txt  requirements.hashes.source.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.txt  rpms.in.yaml  rpms.lock.yaml
.reins/adrs/: adr-001.md  adr-002-in-memory-offloading.md
.reins/plans/: OLS-2277.md  OLS-666.md
.tekton/: lightspeed-service-pull-request.yaml  lightspeed-service-push.yaml
app/: constants.py  main.py  utils.py
app/endpoints/: feedback.py  ols.py
app/models/: config.py  models.py
config/: kustomization.yaml  namespace.yaml  ols-client-test.yaml  ols-client.yaml  ols-rbac.yaml  ols.yaml
docs/: architecture_diagram.uml  config.puml  credential-hot-reload.md  llms_classes.uml  llms_packages.uml  openapi.json  reasoning-tokens.md  requirements.uml  requirements_per_arch.uml  sequence_diagram.uml  skills_progressive_disclosure.md  token_truncation.uml  update-requirements.md  user_data_flow.uml
docs/ai/: config.md  git.md  providers.md  testing.md
docs/proposals/: okp-rag-integration.md
docs/rfe/: kubernetes-mcp-server-adoption.md
docs/superpowers/: bedrock-provider-findings.md
embeddings_model/granite-embedding-30m-english/: config.json  sentence_bert_config.json  tokenizer_config.json
eval/: README.md  eval_data.yaml  eval_data_cluster_updates.yaml  eval_data_short.yaml  rbac-cluster-updates.yaml  system.yaml  system_azure_openai_lseval.yaml  system_bedrock_deepseek_lseval.yaml  system_cluster_updates.yaml  system_openai_lseval.yaml  system_rhelai_vllm_lseval.yaml  system_rhoai_vllm_lseval.yaml  system_vertex_claude_lseval.yaml  system_vertex_gemini_lseval.yaml  system_watsonx_granite.yaml  system_watsonx_lseval.yaml
eval/kiali-ossm/: Makefile  README.md  mcp-config.toml  scenario_evals.yaml  system.yaml
eval/netobserv/: Makefile  README.md  scenario_evals.yaml  system.yaml
eval/scripts/: update_eval_trends.py
eval/troubleshooting/: Makefile  README.md  evals.yaml  system.yaml
examples/: ols-metrics-resources.yaml  olsconfig-local-ollama.yaml  olsconfig.yaml  openshift-lightspeed-tls.yaml  openshift-lightspeed.yaml
gradio/: main.py
hack/: codecov.sh
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl
hooks/: pre-commit
lightspeed_agents/: agents.py  settings.py
lightspeed_service/: constants.py  main.py  models.py
lightspeed_service/cache/: cache_factory.py  in_memory_cache.py  redis_cache.py
lightspeed_service/docs/: docs_summarizer.py
lightspeed_service/indexer/: indexer.py
lightspeed_service/query_helpers/: happy_response_generator.py  question_validator.py  task_breakdown.py  task_performer.py  task_processor.py  task_rephraser.py  yaml_generator.py  yes_no_classifier.py
lightspeed_service/routers/: feedback.py  ols.py
lightspeed_service/ui/: gradio_ui.py
lightspeed_service/utils/: config.py  json_tools.py  logger.py  model_context.py  suid.py
manifests/: kustomization.yaml  namespace.yaml  ols-client-test-rbac.yaml  ols-client-test.yaml  ols-rbac.yaml  ols-redis.yaml  ols.yaml
mcp_local/: __init__.py  oc_cli_tools.py  openshift.py
modules/: conversation_cache.py  docs_summarizer.py  gradio_ui.py  happy_response_generator.py  model_context.py  question_validator.py  task_breakdown.py  task_performer.py  task_processor.py  task_rephraser.py  yaml_generator.py  yes_no_classifier.py
ols/: __init__.py  constants.py  version.py
ols/app/: __init__.py  constants.py  main.py  metrics.py  routers.py  utils.py
ols/customize/: __init__.py
ols/plugins/: __init__.py
ols/runners/: __init__.py  quota_scheduler.py  uvicorn.py
ols/src/: __init__.py  constants.py
ols/user_data_collection/: README.md  __init__.py  data_collector.py  docker-compose.yaml  fake_ingress.py  udc-config.yaml
ols/utils/: audit_logger.py  auth_dependency.py  certificates.py  checks.py  config.py  connection_decorator.py  environments.py  errors_parsing.py  keywords.py  logger.py  logging.py  mcp_headers.py  mcp_utils.py  otel.py  postgres.py  pyroscope.py  query_filter.py  redactor.py  ssl.py  suid.py  tls.py  token_handler.py
openai/cluster/: clusterserviceversion.yaml  configmap.yaml  deployments.yaml  (+8 more)
our_ols/: constants.py
postgres/: Containerfile
postgresql/: Containerfile.ubi
scripts/: build-container.sh  codecov.sh  download_embeddings_model.py  feedback_aggregator.py  filter-requirements.py  generate-certs.sh  generate-rpm-lock.sh  generate_embeddings.py  generate_openapi_schema.py  generate_packages_to_prefetch.py  generate_requirements_overrides.py  konflux_requirements.sh  konflux_resolve.py  olsconfig.yaml  print_ec_failures.py  questions_gen.py  sync_repos.py  test-e2e-standalone.sh  tls-scan.sh  token-counter.py  transform_coverage_report.py  upload_artifact_s3.py  validate_response.py  verify_hermetic_requirements.sh
src/: config.py  constants.py  logger.py
tests/: constants.py  test_ols.py
tools/: indexer.py  json_tools.py  ols_logger.py
utils/: config.py  json_tools.py  logger.py  model_context.py
(+719 files in other folders)
